--- a/config/sys.config
+++ b/config/sys.config
@@ -10,8 +10,8 @@
             [
                 {host, "localhost"},
                 {database, "erl"},
-                {username, "postgreserlang"},
-                {password, "5RZz(8e^y.N(+y_H"}
+                {username, "dbuser"},
+                {password, "pwd0123456789"}
             ]}
         ]
     }]
