--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,8 @@
 {erl_opts, [debug_info]}.
 {xref_checks, [undefined_function_calls]}.
 {deps, [
-	{jiffy, ".*", {git, "https://github.com/davisp/jiffy"}},
-	{cowboy, ".*", {git, "https://github.com/extend/cowboy"}},
-	{cowboy_session, ".*", {git, "https://github.com/dronowar/cowboy_session"}},
-	{emodel, ".*", {git, "https://github.com/egobrain/emodel.git"}},
-	{pgapp, ".*", {git, "https://github.com/epgsql/pgapp.git"}},
-	{sync, ".*", {git, "git://github.com/rustyio/sync.git", {branch, "master"}}}
+        {jiffy,             "0.15.2"},
+        {trails,            "2.1.0"},
+        {cowboy_swagger,    "2.1.0"},
+        {cowboy,            "2.3.0"}
 ]}.
